added sharing url

--- a/forStoryMaps/index.html
+++ b/forStoryMaps/index.html
@@ -48,7 +48,7 @@
         //specify the url to a geometry service
         geometryserviceurl:"http://tasks.arcgisonline.com/ArcGIS/rest/services/Geometry/GeometryServer",
         //Modify this to point to your sharing service URL if you are using the portal
-        sharingurl :""
+        sharingurl :"http://arcgis.com/sharing/content/items"
       };
         initMap();
     }
