--- a/forAGOL/forGallery/index.html
+++ b/forAGOL/forGallery/index.html
@@ -90,10 +90,10 @@
           </div>
 
           <!-- Map Section -->
-          <div id="map" dojotype="dijit.layout.ContentPane" region="center">
+          <div id="map" dojotype="dijit.layout.ContentPane" region="center" dir="ltr">
           	<div class="moveable" title="" id="sliderdiv">
             </div>
-            <div id="legendCon">
+            <div id="legendCon" dir="ltr">
               	<div id="legendToggle"><p id="legTogText"></p></div>
              	<div id="legendDiv"></div>
             </div>
